@@ -33,7 +33,7 @@ AC_LANG(C)
 dnl Compute the canonical host (run-time) system type variable
 AC_CANONICAL_HOST
 
-AM_INIT_AUTOMAKE
+AM_INIT_AUTOMAKE(tar-pax)
 dnl Do not rebuild generated files every time
 AM_MAINTAINER_MODE
 
